<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SNS_project</string>
    <!-- Preference Titles -->
    <string name="messages_header">회원</string>
    <string name="notice_header">공지사항</string>
    <string name="alarm_header">알람</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">버튼 켜면 이 문자가 보일거임.
    </string>
    <string name="attachment_summary_off">버튼 끄면 이 문자가 보일거임.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Setting">설정</string>
    <string name="Logout">로그아웃</string>

    <string name="save">Save</string>
    <string name="generate">Generate</string>
    <string name="enter_text">Enter Text</string>
    <string name="value_required">Value Required</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sync_header">Sync</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

<!--    codi_activity 옷장 안내 문구-->
    <string name="closet_notice">비슷한 상품을 가지고 계신지 옷장에서 확인해보세요!</string>
</resources>