<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_notifications_24"
        app:title="notifications">

        <SeekBarPreference
            android:key="volume_notifications"
            app:title="volume"
            app:showSeekBarValue="true"
            app:defaultValue="50"/>

        <SwitchPreferenceCompat
            android:key="notifications"
            app:title="Disable notifications"
            android:summaryOn="더 이상 소식을 받을 수 없습니다."
            android:summaryOff="계속 소식을 받을 수 있습니다."/>
    </PreferenceCategory>
</PreferenceScreen>